--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #282829;
+    padding: 0 15px;
 }
 
 li {
@@ -38,6 +39,7 @@ li {
 /* ======================= */
 .container {
     width: 1920px;
+    margin: 0 auto;
 }
 
 .hero {
@@ -47,23 +49,33 @@ li {
 }
 
 .hero__content {
-    padding-left: 185px;
     display: flex;
     flex-direction: column;
     color: #ffffff;
 }
 
 .header {
+    padding-left: 185px;
+    justify-content: left;
+    background-color: transparent;
     height: 70px;
     width: 100%;
     display: flex;
     align-items: center;
+    position: fixed;
 }
 
 .logo {
     margin-right: 100px;
     width: 155px;
     height: 30px;
+    cursor: pointer;
+}
+
+.mobile-logo {
+    width: 155px;
+    height: 30px;
+    cursor: pointer;
 }
 
 .items {
@@ -77,6 +89,7 @@ li {
     font-family: "Arial", sans-serif;
     font-size: 16px;
     font-style: italic;
+    line-height: 150%;
     color: #fff;
 }
 
@@ -86,46 +99,197 @@ li {
 }
 
 .hero-round {
+    margin-right: 15px;
     width: 39px;
     height: 37px;
 }
 
 .hero__text-header {
-    font-family: "Prata", serif;
-    font-weight: 400;
-    font-size: 80px;
     margin: 0;
     margin-bottom: 50px;
     padding-top: 150px;
+    color: #ffffff;
+    font-family: "Prata", serif;
+    font-weight: 400;
+    font-size: 80px;
+    line-height: 120%;
 }
 
 .hero__text {
     margin: 0;
     margin-bottom: 64px;
+    padding-left: 185px;
     font-family: Arial, sans-serif;
     font-size: 50px;
     font-weight: 400;
+    line-height: 120%;
+    color: #ffffff;
 }
 
 .hero__list {
     display: flex;
     align-items: center;
     margin: 0;
+    font-family: "Arial", sans-serif;
+    font-size: 24px;
+    line-height: 110%;
+}
+
+.hero__list span {
+    font-family: "Prata", serif;
+    font-size: 40px;
+    line-height: 150%;
+    margin: 0 7px;
 }
 
 .hero__btn {
+    font-family: "Arial", sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 110%;
+    letter-spacing: 1px;
     text-transform: uppercase;
-    padding: 32px 50px;
+    padding: 32px 52px;
+    margin-top: 40px;
+    cursor: pointer;
+    transition: all .3s;
 }
-/* ============================ */
+.hero__btn:active {
+    background-color: #b5b5b6;
+}
+.hero__btn:hover {
+    background-color: #b5b5b6;
+}
+.hero__btn:focus {
+    background-color: #b5b5b6;
+}
+/* =================== mobile =================== */
+.mobile-container {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-mobile {
+    display: none;
+}
+
+.mobile-logo {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.mobile-items {
+    width:  100%;
+    margin: 0;
+    padding: 0;
+    display: block;
+    list-style: none;
+    text-align: center;
+}
+
+.mobile-item:not(:last-child) {
+    margin-bottom: 30px;
+}
+.header__burger-btn {
+    background-color: transparent;
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border: none;
+    z-index: 2;
+}
+
+.header__burger-btn span {
+    position: absolute;
+    width: 30px;
+    height: 3px;
+    background-color: #fff;
+    transition: transform .3s;
+}
+
+.header__burger-btn span:nth-of-type(2) {
+    top: calc(50% - 10px);
+}
+
+.header__burger-btn span:nth-of-type(3) {
+    top: calc(50% + 10px);
+}
+
+.header__burger-btn li {
+    list-style-type: none;
+}
+
+.header__burger-btn.active span:first-of-type {
+    transform: translateX(-500%);
+}
+
+.header__burger-btn.active span:nth-of-type(2) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.header__burger-btn.active span:nth-of-type(3) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.header__burger-btn {
+    display: none;
+}
+
+.nav-list__item-mobile:not(:last-child) {
+    margin-bottom: 25px;
+}
+
+.active {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+/* ============================================= */
 .info__block {
     display: flex;
     padding: 100px 0;
     margin-bottom: 100px;
 }
 
-.info__list {
+.info__text {
     padding: 35px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: left;
+}
+
+.info__list {
+    margin: 0;
+    padding: 0;
+}
+
+.info__btn {
+    width: 100%;
+    font-family: "Arial", sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 110%;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    padding: 32px 50px;
+    margin-top: 40px;
+    cursor: pointer;
+    transition: all .3s;
+}
+.info__btn:active {
+    background-color: #b5b5b6;
+}
+.info__btn:hover {
+    background-color: #b5b5b6;
+}
+.info__btn:focus {
+    background-color: #b5b5b6;
 }
 
 .info__img {
@@ -139,13 +303,45 @@ li {
     justify-content: left;
 }
 
+.info__list-item:not(:last-child) {
+    border-bottom: 1px solid #55565A;
+}
+
 .info__list-icon {
     width: 58px;
     height: 47px;
+    margin-right: 20px;
 }
 
 .info__list-text {
+    font-family: "Arial", sans-serif;
+    font-size: 24px;
+    line-height: 140%;
     color: #ffffff;
+}
+
+.form__btn {
+    width: 100%;
+    font-family: "Arial", sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 150%;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    padding: 32px;
+    cursor: pointer;
+    color: #ffffff;
+    background-color: #000;
+    transition: all .3s;
+}
+.form__btn:active {
+    background-color: #3e3e3f;
+}
+.form__btn:hover {
+    background-color: #3e3e3f;
+}
+.form__btn:focus {
+    background-color: #3e3e3f;
 }
 /* =============================== */
 .form {
@@ -153,6 +349,16 @@ li {
     background-color: #282829;
     display: flex;
     justify-content: center;
+}
+
+.form h3 {
+    margin: 0;
+    margin-bottom: 45px;
+    font-family: "Prata", serif;
+    font-size: 54px;
+    font-weight: normal;
+    line-height: 110%;
+    color: #38535D;
 }
 
 .form__field {
@@ -165,10 +371,32 @@ li {
 
 .form__left {
     width: 50%;
+    padding-left: 135px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+}
+
+.form__input {
+    max-width: 100%;
+    padding: 14px 38px;
+}
+
+.form__input:nth-child(3) {
+    margin-bottom: 10px;
+}
+
+.form__input:nth-child(5){
+    margin-bottom: 25px;
+}
+
+.checkbox__string {
+    margin: 0;
+    margin-bottom: 25px;
+}
+
+.form__input-checkbox {
+    margin-right: 10px;
 }
 
 .form__right {
@@ -213,7 +441,6 @@ li {
 }
 
 .footer__content {
-    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -226,7 +453,31 @@ li {
 }
 
 .footer__btn {
+    margin-bottom: 38px;
+    font-family: "Arial", sans-serif;
+    font-size: 20px;
+    font-weight: normal;
+    font-style: italic;
+    line-height: 150%;
+    letter-spacing: 1px;
     text-transform: uppercase;
+    padding: 32px 52px;
+    margin-top: 40px;
+    cursor: pointer;
+    transition: all .3s;
+}
+.footer__btn:active {
+    background-color: #b5b5b6;
+}
+.footer__btn:hover {
+    background-color: #b5b5b6;
+}
+.footer__btn:focus {
+    background-color: #b5b5b6;
+}
+
+.social__icon:hover {
+    fill: #a8a5a6;
 }
 
 .footer__policy {
@@ -248,8 +499,100 @@ li {
     .hero__content {
         padding: 25px;
     }
+    .hero__text {
+        padding-left: 25px;
+        margin-bottom: 15px;
+    }
     .hero__image {
         width: 100%;
         max-width: 1200px;
     }
+    .info__block {
+        width: 100%;
+        flex-direction: column;
+    }
+    .form__right {
+        display: none;
+        justify-content: center;
+    }
+    .form__input {
+        width: 80%;
+    }
+    .form {
+        width: 100%;
+    }
+    .form__left {
+        width: 100%;
+    }
+    .form__btn {
+        width: 50%;
+        padding-left: 0;
+    }
 }
+
+@media  screen and (max-width: 925px) {
+    .header {
+        display: none;
+    }
+    .hero__text {
+        padding-left: 0;
+    }
+    .header__burger-btn {
+        display: block;
+    }
+}
+
+@media  screen and (max-width: 820px) {
+    .form__left {
+        padding-left: 35px;
+    }
+        .form__btn {
+            padding: 10px 15px;
+            font-size: 16px;
+        }
+}
+
+@media  screen and (max-width: 530px) {
+    .form__left h3 {
+        font-size: 30px;
+    }
+    .logo {
+        margin: 0 auto;
+        margin-bottom: 25px;
+        margin-top: 20px;
+    }
+    .hero__list {
+        font-size: 18px;
+    }
+    .hero__list span {
+        font-size: 24px;
+    }
+    .form__btn {
+        padding: 15px 20px;
+        font-size: 18px;
+    }
+    .footer-list {
+       display: none;
+    }
+    .footer__control {
+        display: flex;
+        flex-direction: column;
+    }
+    .footer__btn {
+        padding: 10px 15px;
+    }
+}
+
+@media  screen and (max-width: 380px) {
+    .hero__list {
+        font-size: 16px;
+    }
+    .hero__list span {
+        font-size: 20px;
+    }
+    .form__btn {
+        padding: 7px 10px;
+        font-size: 16px;
+    }
+}
+
